--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,8 +34,7 @@
        <button type="submit" [disabled]="loginForm.invalid">Login</button>
      </div>
    
-<div>New user?</div>
-
+    <div>Don't have an account yet?</div>
      <div class="form-group">
        <button>
          Sign up
