--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,13 @@
-<form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<div class="login-form-flex">
 
+<mat-card>
+    <mat-card-title >
+      User login
+    </mat-card-title>
+
+<mat-card-content>
+<form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <mat-form-field>
     <div class="form-group">
        <label for="email">Email</label>
        <input
@@ -14,7 +22,9 @@
                Email is required.
        </div>
     </div>
+  </mat-form-field>
    
+  <mat-form-field>
     <div class="form-group">
        <label for="password">Password</label>
        <input
@@ -29,17 +39,23 @@
                Password is required.
        </div>
     </div>
+  </mat-form-field>
+
       
      <div class="form-group">
-       <button type="submit" [disabled]="loginForm.invalid">Login</button>
+       <button mat-stroked-button color="primary" type="submit" [disabled]="loginForm.invalid">Login</button>
      </div>
    
     <div>Don't have an account yet?</div>
      <div class="form-group">
-       <button>
+       <button mat-stroked-button color="primary">
          Sign up
        </button>
      </div>
    </form>
+
+</mat-card-content>
+  </mat-card>
+  </div>
    
    
