--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,6 @@ $desk-booking-app-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
