--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,15 @@
-<div class="login-form-flex">
+<div class="login-form-flex container">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-xxl-7 col-sm-7">
         <div class="card shadow-lg">
           <div class="card-body p-5">
-            <h1 class="fs-4 card-title fw-bold mb-4">User login</h1>
+            <h1 class="fs-4 card-title fw-bold mb-4 text-center">User login</h1>
 
             <form
               *ngIf="loginForm"
               [formGroup]="loginForm"
               (ngSubmit)="onSubmit()"
-              class=""
             >
               <div class="mb-3">
                 <label for="email" class="mb-2 text-muted">Email</label>
@@ -37,7 +36,7 @@
               <div class="mb-3">
                 <div class="mb-2 w-100">
                   <label for="password" class="text-muted">Password</label>
-                  <a href="forgot.html" class="float-end"> Forgot Password? </a>
+                  <a href="" class="float-end"> Forgot Password? </a>
                 </div>
                 <input
                   type="password"
@@ -86,7 +85,7 @@
           <div class="card-footer py-3 border-0">
             <div class="text-center">
               Don't have an account?
-              <a href="register.html" class="text-dark">Sign up</a>
+              <a href="" class="text-dark">Sign up</a>
             </div>
           </div>
         </div>
