--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,10 +3,14 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  h1 {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
   }
   
-  .button-flex-container {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-  }
