--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '@angular/material';
+@use '~@angular/material' as mat;
 //@include mat-core();
 // Plus imports for other components in your app.
 
