--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 //
 //// Custom Theming for Angular Material
 //// For more information: https://material.angular.io/guide/theming
-//@import '@angular/material/theming';
 //@use '@angular/material' as mat;
+//@import '@angular/material/theming';
+//
 ////@include mat-core();
 //// Plus imports for other components in your app.
 //
@@ -39,7 +40,7 @@
 //
 //html, body { height: 100%; }
 //body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-//
-///* Importing Bootstrap SCSS file. */
-////@import '~bootstrap/scss/bootstrap';
-//@import 'node_modules/bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+//@import '~bootstrap/scss/bootstrap';
+@import 'node_modules/bootstrap/scss/bootstrap';
