--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,9 +12,9 @@
 //// Be sure that you only ever include this mixin once!
 //@include mat.core();
 //
-//// Define the palettes for your theme using the Material Design palettes available in palette.scss
-//// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-//// hue. Available color palettes: https://material.io/design/color/
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
 //$desk-booking-app-primary: mat.define-palette(mat.$indigo-palette);
 //$desk-booking-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 //
@@ -35,12 +35,14 @@
 //// Alternatively, you can import and @include the theme mixins for each component
 //// that you are using.
 //@include mat.all-component-themes($desk-booking-app-theme);
-//
-///* You can add global styles to this file, and also import other style files */
-//
-//html, body { height: 100%; }
-//body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* You can add global styles to this file, and also import other style files */
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
-//@import '~bootstrap/scss/bootstrap';
-@import 'node_modules/bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
+//@import 'node_modules/bootstrap/scss/bootstrap';
