link between login and registration forms added + page not found added if wrong url

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -136,8 +136,8 @@
               </div>
 
               <p class="text-center text-muted mt-5 mb-0">
-                Have already an account?
-                <a href="#!" class="fw-bold text-body"><u>Login here</u></a>
+                Already have an account?
+                <a routerLink="/login" routerLinkActive="active" class="fw-bold text-body">Login here</a>
               </p>
             </form>
           </div>
