--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="col-xxl-7 col-sm-7">
         <div class="card shadow-lg">
           <div class="card-body p-5">
-            <h1 class="fs-4 card-title fw-bold mb-4 text-center">User login</h1>
+            <h1 class="fs-4 card-title fw-bold mb-4 text-center text-uppercase text-center">User login</h1>
 
             <form
               *ngIf="loginForm"
@@ -85,7 +85,12 @@
           <div class="card-footer py-3 border-0">
             <div class="text-center">
               Don't have an account?
-              <a href="" class="text-dark">Sign up</a>
+              <a
+                routerLink="/registration"
+                routerLinkActive="active"
+                class="text-dark"
+                >Sign up</a
+              >
             </div>
           </div>
         </div>
