trying to fix footer branch conflicts

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,6 +4,6 @@
   >
     <span class="text-muted">&copy; Swedbank IT Academy </span>
     <span class="text-muted">Team 4 </span>
-    <span class="text-muted te">2022</span>
+    <span class="text-muted">2022</span>
   </footer>
 </div>
