--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,4 +3,13 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+h1 {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
