--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-form-flex">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-sm-7">
+      <div class="col-12 col-md-9 col-lg-7 col-xl-6">
         <div class="card shadow-lg">
           <div class="card-body p-5">
             <h1 class="fs-4 card-title fw-bold mb-4 text-center text-uppercase text-center">User login</h1>
