--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -7,10 +7,11 @@
             <h2 class="text-uppercase text-center mb-3">User registration</h2>
 
             <form
+              #userPost="ngForm"
               class="reg__form"
               *ngIf="regForm"
               [formGroup]="regForm"
-              (ngSubmit)="onSubmit()"
+              (ngSubmit)="onSubmit({ data: userPost.value })"
             >
               <div class="mb-4">
                 <label class="form-label" for="firstName">First name</label>
@@ -25,8 +26,7 @@
                   *ngIf="
                     regForm.get('firstName')?.errors?.['required'] &&
                     (regForm.get('firstName')?.dirty ||
-                      regForm.get('firstName')?.touched)
-                  "
+                      regForm.get('firstName')?.touched)"
                 >
                   Field is required.
                 </div>
@@ -92,7 +92,6 @@
                   formControlName="password"
                   class="form-control form-control-lg"
                   required
-                  minlength="3"
                 />
                 <div
                   class="alert alert-danger"
@@ -106,9 +105,9 @@
                 </div>
                 <div
                   class="alert alert-warning"
-                  *ngIf="regForm.get('password')?.errors?.['minlength']"
+                  *ngIf="regForm.get('password')?.errors"
                 >
-                  Password must be at least 3 characters long.
+                  Password must be at least 2 characters long.
                 </div>
               </div>
 
@@ -137,7 +136,12 @@
 
               <p class="text-center text-muted mt-5 mb-0">
                 Already have an account?
-                <a routerLink="/login" routerLinkActive="active" class="fw-bold text-body">Login here</a>
+                <a
+                  routerLink="/login"
+                  routerLinkActive="active"
+                  class="fw-bold text-body"
+                  >Login here</a
+                >
               </p>
             </form>
           </div>
