update reactive form

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -11,7 +11,7 @@
               class="reg__form"
               *ngIf="regForm"
               [formGroup]="regForm"
-              (ngSubmit)="onSubmit({ data: userPost.value })"
+              (submit)="onSubmit({ data: userPost.value })"
             >
               <div class="mb-4">
                 <label class="form-label" for="firstName">First name</label>
@@ -24,9 +24,10 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                    regForm.get('firstName')?.errors?.['required'] &&
-                    (regForm.get('firstName')?.dirty ||
-                      regForm.get('firstName')?.touched)"
+                    regForm.controls['firstName'].errors?.['required'] &&
+                    (regForm.controls['firstName']?.dirty ||
+                      regForm.controls['firstName']?.touched)
+                  "
                 >
                   Field is required.
                 </div>
@@ -43,9 +44,9 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                    regForm.get('lastName')?.errors?.['required'] &&
-                    (regForm.get('lastName')?.dirty ||
-                      regForm.get('lastName')?.touched)
+                    regForm.controls['lastName'].errors?.['required'] &&
+                    (regForm.controls['lastName']?.dirty ||
+                      regForm.controls['lastName']?.touched)
                   "
                 >
                   Field is required.
@@ -65,9 +66,9 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                    (regForm.get('email')?.dirty ||
-                      regForm.get('email')?.touched) &&
-                    regForm.get('email')?.errors?.['required']
+                    (regForm.controls['email']?.dirty ||
+                      regForm.controls['email']?.touched) &&
+                   regForm.controls['email'].errors?.['required']
                   "
                 >
                   Field is required.
@@ -75,9 +76,9 @@
                 <div
                   class="alert alert-warning"
                   *ngIf="
-                    regForm.get('email')?.errors &&
-                    regForm.get('email')?.dirty &&
-                    regForm.get('email')?.invalid
+                    regForm.controls['email']?.errors &&
+                    regForm.controls['email']?.dirty &&
+                    regForm.controls['email'].errors?.['email']
                   "
                 >
                   Email is invalid.
@@ -96,9 +97,9 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                    regForm.get('password')?.errors?.['required'] &&
-                    (regForm.get('password')?.dirty ||
-                      regForm.get('password')?.touched)
+                    regPassword?.errors?.['required'] &&
+                    (regForm.controls['password']?.dirty ||
+                      regForm.controls['password']?.touched)
                   "
                 >
                   Field is required.
@@ -106,7 +107,7 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                  regForm.get('password')?.errors?.['pattern']"
+                  regForm.controls['password']?.errors?.['pattern']"
                 >
                   Pass is wrong.
                 </div>
