update reactive form

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -107,7 +107,7 @@
                 <div
                   class="alert alert-danger"
                   *ngIf="
-                  regForm.controls['password']?.errors?.['pattern']"
+                  regPassword?.errors?.['pattern']"
                 >
                   Pass is wrong.
                 </div>
