--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -10,7 +10,7 @@
               class="reg__form"
               *ngIf="regForm"
               [formGroup]="regForm"
-              (ngSubmit)="onSubmit()"
+              (ngSubmit)="register()"
             >
               <div class="mb-4">
                 <label class="form-label" for="firstName">First name</label>
