registration and login forms updated

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
             <form
               *ngIf="loginForm"
               [formGroup]="loginForm"
-              (ngSubmit)="login()"
+              (ngSubmit) = "login()"
             >
               <div class="mb-3">
                 <label for="email" class="mb-2 text-muted">Email</label>
@@ -19,19 +19,31 @@
                   id="email"
                   formControlName="email" 
                   placeholder="Enter email"
-                  required
+                  ngModel
+                  email
                 />
 
                 <div
-                  *ngIf="
-                    loginForm.get('email')?.invalid &&
-                    (loginForm.get('email')?.dirty ||
-                      loginForm.get('email')?.touched)
-                  "
+                *ngIf="
+                (loginForm.controls['email']?.dirty ||
+                loginForm.controls['email']?.touched) &&
+                loginForm.controls['email'].errors?.['required']
+              "
                   class="alert alert-danger"
                 >
                   Email is required.
                 </div>
+
+                <div
+                class="alert alert-warning"
+                *ngIf="
+                loginForm.controls['email']?.errors &&
+                loginForm.controls['email']?.dirty &&
+                loginForm.controls['email'].errors?.['email']
+              "
+              >
+                Email is invalid.
+              </div>
               </div>
 
               <div class="mb-3">
@@ -45,15 +57,14 @@
                   id="password"
                   formControlName="password" 
                   placeholder="Enter password"
-                  required
                 />
 
                 <div
-                  *ngIf="
-                    loginForm.get('password')?.invalid &&
-                    (loginForm.get('password')?.dirty ||
-                      loginForm.get('password')?.touched)
-                  "
+                *ngIf="
+                (loginForm.get('password')?.dirty ||
+                loginForm.get('password')?.touched) &&
+                loginForm.get('password')?.errors?.['required']
+              "
                   class="alert alert-danger"
                 >
                   Password is required.
