--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,3 +1,5 @@
 <div *ngIf="notify" class="alert alert-success container">
-    {{ notify }}
+  {{ notify }}
 </div>
+<button type="button" class="btn btn-dark">Room 1</button>
+<img src="../../../assets/deskroomLayout.png" width="768px" length="1024px" />
