--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,5 +1,81 @@
 <div *ngIf="notify" class="alert alert-success container">
   {{ notify }}
 </div>
-<button type="button" class="btn btn-dark">Room 1</button>
-<img src="../../../assets/deskroomLayout.png" width="768px" length="1024px" />
+
+<!-- 
+<div
+  id="layoutCarousel"
+  class="carousel slide carousel-dark"
+  data-ride="carousel"
+>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        class="d-block w-100"
+        src="../../../assets/deskroomLayout.png"
+        alt="First slide"
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Room 1</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        class="d-block w-100"
+        src="../../../assets/deskroomLayout.png"
+        alt="Second slide"
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Room 2</h5>
+      </div>
+    </div>
+  </div>
+  <a
+    class="carousel-control-prev"
+    href="#layoutCarousel"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#layoutCarousel"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </a>
+</div> -->
+
+<!-- <ngb-carousel *ngIf="images">
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="images[0]" alt="Random first slide" />
+    </div>
+    <div class="carousel-caption">
+      <h3>First slide label</h3>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="images[1]" alt="Random second slide" />
+    </div>
+    <div class="carousel-caption">
+      <h3>Second slide label</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="images[2]" alt="Random third slide" />
+    </div>
+    <div class="carousel-caption">
+      <h3>Third slide label</h3>
+      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+    </div>
+  </ng-template>
+</ngb-carousel> -->
