reg form in the middle of page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,10 @@
     </a>
     <h1>Office Desk Booking</h1>
     <button
-      class="navbar-toggler"
+      class="navbar-toggler collapsed"
       type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
+      data-toggle="collapse"
+      data-target="#navbarNav"
       aria-controls="navbarNav"
       aria-expanded="false"
       aria-label="Toggle navigation"
@@ -28,11 +28,6 @@
           >
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link" routerLink="/auth/login" routerLinkActive="active"
-            >Log out</a
-          >
-        </li>
-        <li class="nav-item ms-auto">
           <a class="nav-link" routerLink="" routerLinkActive="active"
             >Book a desk</a
           >
@@ -40,6 +35,11 @@
         <li class="nav-item ms-auto">
           <a class="nav-link" routerLink="" routerLinkActive="active"
             >Cancel booking</a
+          >
+        </li>
+        <li class="nav-item ms-auto">
+          <a class="nav-link" routerLink="/auth/login" routerLinkActive="active"
+            >Log out</a
           >
         </li>
       </ul>
