--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -2,7 +2,6 @@
   {{ notify }}
 </div>
 
-<!-- 
 <div
   id="layoutCarousel"
   class="carousel slide carousel-dark"
@@ -48,12 +47,12 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </a>
-</div> -->
+</div>
 
-<!-- <ngb-carousel *ngIf="images">
+<!-- <ngb-carousel>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img [src]="images[0]" alt="Random first slide" />
+      <img src="../../../assets/deskroomLayout.png" alt="Random first slide" />
     </div>
     <div class="carousel-caption">
       <h3>First slide label</h3>
@@ -62,20 +61,11 @@
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img [src]="images[1]" alt="Random second slide" />
+      <img src="../../../assets/deskroomLayout.png" alt="Random second slide" />
     </div>
     <div class="carousel-caption">
       <h3>Second slide label</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[2]" alt="Random third slide" />
-    </div>
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
     </div>
   </ng-template>
 </ngb-carousel> -->
