--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   id="layoutCarousel"
   class="carousel slide carousel-dark"
   data-ride="carousel"
@@ -43,4 +43,31 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </a>
-</div>
+</div> -->
+
+<ngb-carousel>
+  <ng-template ngbSlide>
+    <div class="wrapper">
+      <img
+        src="../../../assets/deskroomLayout.png"
+        class="rounded mx-auto d-block"
+        alt="Random first slide"
+      />
+    </div>
+    <div class="carousel-caption">
+      <h3 class="text-dark">Room 1</h3>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <div class="wrapper">
+      <img
+        src="../../../assets/deskroomLayout.png"
+        class="rounded mx-auto d-block"
+        alt="Random second slide"
+      />
+    </div>
+    <div class="carousel-caption">
+      <h3 class="text-dark">Room 2</h3>
+    </div>
+  </ng-template>
+</ngb-carousel>
