--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,9 +46,8 @@
           </li>
           <li class="nav-item ms-auto">
             <a
-              class="nav-link"
-              routerLink="/auth/login"
-              routerLinkActive="active"
+              class="nav-link pointer"
+              (click)="logout()"
               >Log out</a
             >
           </li>
