--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -111,3 +111,12 @@
 </div>
 
 
+<div
+class="alert alert-danger"
+role="alert"
+*ngIf="isLoginFailed"
+>
+Login failed: Email or password is incorrect.
+</div>
+
+
