--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,12 +4,16 @@
       <div class="col-12 col-md-9 col-lg-7 col-xl-6">
         <div class="card shadow-lg">
           <div class="card-body p-5">
-            <h1 class="fs-4 card-title fw-bold mb-4 text-center text-uppercase text-center">User login</h1>
+            <h1
+              class="fs-4 card-title fw-bold mb-4 text-center text-uppercase text-center"
+            >
+              User login
+            </h1>
 
             <form
               *ngIf="loginForm"
               [formGroup]="loginForm"
-              (ngSubmit) = "login()"
+              (ngSubmit)="login()"
             >
               <div class="mb-3">
                 <label for="email" class="mb-2 text-muted">Email</label>
@@ -17,12 +21,12 @@
                   type="email"
                   class="form-control"
                   id="email"
-                  formControlName="email" 
+                  formControlName="email"
                   placeholder="Enter email"
                 />
 
                 <div
-                *ngIf="
+                  *ngIf="
                 (loginForm.controls['email']?.dirty ||
                 loginForm.controls['email']?.touched) &&
                 loginForm.controls['email'].errors?.['required']
@@ -33,15 +37,15 @@
                 </div>
 
                 <div
-                class="alert alert-warning"
-                *ngIf="
+                  class="alert alert-warning"
+                  *ngIf="
                 loginForm.controls['email']?.errors &&
                 loginForm.controls['email']?.dirty &&
                 loginForm.controls['email'].errors?.['email']
               "
-              >
-                Email is invalid.
-              </div>
+                >
+                  Email is invalid.
+                </div>
               </div>
 
               <div class="mb-3">
@@ -53,12 +57,12 @@
                   type="password"
                   class="form-control"
                   id="password"
-                  formControlName="password" 
+                  formControlName="password"
                   placeholder="Enter password"
                 />
 
                 <div
-                *ngIf="
+                  *ngIf="
                 (loginForm.get('password')?.dirty ||
                 loginForm.get('password')?.touched) &&
                 loginForm.get('password')?.errors?.['required']
@@ -89,6 +93,14 @@
                 >
                   Login
                 </button>
+
+                <div
+                  class="alert alert-danger"
+                  role="alert"
+                  *ngIf="isLoginFailed"
+                >
+                  Login failed: Email or password is incorrect.
+                </div>
               </div>
             </form>
           </div>
@@ -109,14 +121,3 @@
     </div>
   </div>
 </div>
-
-
-<div
-class="alert alert-danger"
-role="alert"
-*ngIf="isLoginFailed"
->
-Login failed: Email or password is incorrect.
-</div>
-
-
