--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -93,15 +93,15 @@
                 >
                   Login
                 </button>
-
-                <div
-                  class="alert alert-danger"
-                  role="alert"
-                  *ngIf="isLoginFailed"
-                >
-                  Login failed: Email or password is incorrect.
-                </div>
               </div>
+              <div class="pt-2">
+              <div
+              class="alert alert-danger"
+              *ngIf="isLoginFailed"
+            >
+              Login failed: Email or password is incorrect.
+            </div>
+          </div>
             </form>
           </div>
 
