--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,11 +45,7 @@
             >
           </li>
           <li class="nav-item ms-auto">
-            <a 
-              class="nav-link pointer"
-              (click)="logout()"
-              >Log out</a
-            >
+            <a class="nav-link pointer" (click)="logout()">Log out</a>
           </li>
         </ul>
       </div>
