--- a/src/app/desk-booking/desk-booking.component.html
+++ b/src/app/desk-booking/desk-booking.component.html
@@ -11,7 +11,6 @@
   />
 </alert>
 <hr />
-
 <ng-template #popTemplate>
   <div>
     <input
@@ -23,6 +22,7 @@
       (ngModelChange)="updateDate()"
       (selectionDone)="dateSelectionDone()"
       bsDatepicker
+      [bsConfig]="{ isAnimated: true }"
     />
   </div>
   <timepicker
@@ -32,33 +32,27 @@
     [showMeridian]="isMeridian"
   >
   </timepicker>
-
   <div style="padding: 5px">
-    <span class="btn-group pull-left" style="margin-right: 10px">
-      <button
-        type="button"
-        class="btn btn-sm btn-info"
-        [hidden]="!isDateVisible"
-        (click)="today()"
-      >
-        Today
-      </button>
-      <button
-        type="button"
-        class="btn btn-sm btn-info"
-        [hidden]="isDateVisible"
-        (click)="now()"
-      >
-        Now
-      </button>
-      <button type="button" class="btn btn-sm btn-danger" (click)="clear()">
-        Clear
-      </button>
-    </span>
+    <button
+      type="button"
+      class="btn btn-warning btn-sm btn-info"
+      [hidden]="!isDateVisible"
+      (click)="today()"
+    >
+      Today
+    </button>
+    <button
+      type="button"
+      class="btn btn-warning btn-sm btn-info"
+      [hidden]="isDateVisible"
+      (click)="now()"
+    >
+      Now
+    </button>
     <span class="btn-group pull-right">
       <button
         type="button"
-        class="btn btn-sm btn-default"
+        class="btn btn-sm btn-info"
         [hidden]="isDateVisible"
         (click)="showDate()"
       >
@@ -66,13 +60,13 @@
       </button>
       <button
         type="button"
-        class="btn btn-sm btn-default"
+        class="btn btn-sm btn-info"
         [hidden]="!isDateVisible"
         (click)="showTime()"
       >
         Time
       </button>
-      <button type="button" class="btn btn-sm btn-success" (click)="close()">
+      <button type="button" class="btn btn-sm btn-danger" (click)="close()">
         Close
       </button>
     </span>
