update date time picker

--- a/src/app/desk-booking/desk-booking.component.html
+++ b/src/app/desk-booking/desk-booking.component.html
@@ -30,6 +30,7 @@
     [(ngModel)]="time"
     (ngModelChange)="updateTime()"
     [showMeridian]="isMeridian"
+    [showMinutes]="false"
   >
   </timepicker>
   <div style="padding: 5px">
