--- a/src/app/desk-booking/desk-booking.component.html
+++ b/src/app/desk-booking/desk-booking.component.html
@@ -86,6 +86,85 @@
   </button>
 </div>
 
+<alert type="success">
+  <input
+    type="text"
+    class="form-control"
+    [popover]="popTemplate"
+    placement="bottom"
+    [outsideClick]="true"
+    #popoverRef="bs-popover"
+    value="{{ dateTime }}"
+    (click)="showDate(); dropdown = false"
+  />
+</alert>
+<hr />
+<ng-template #popTemplate>
+  <div>
+    <input
+      type="text"
+      placeholder="Datepicker2"
+      class="form-control"
+      [hidden]="!isDateVisible"
+      [(ngModel)]="date"
+      (ngModelChange)="updateDate()"
+      (selectionDone)="dateSelectionDone()"
+      bsDatepicker
+      [bsConfig]="{ isAnimated: true }"
+    />
+  </div>
+  <timepicker
+    [hidden]="isDateVisible"
+    [(ngModel)]="time"
+    (ngModelChange)="updateTime()"
+    [showMeridian]="isMeridian"
+    [showMinutes]="false"
+  >
+  </timepicker>
+  <div style="padding: 5px">
+    <button
+      type="button"
+      class="btn btn-warning btn-sm btn-info"
+      [hidden]="!isDateVisible"
+      (click)="today()"
+    >
+      Today
+    </button>
+    <button
+      type="button"
+      class="btn btn-warning btn-sm btn-info"
+      [hidden]="isDateVisible"
+      (click)="now()"
+    >
+      Now
+    </button>
+    <span class="btn-group pull-right">
+      <button
+        type="button"
+        class="btn btn-sm btn-info"
+        [hidden]="isDateVisible"
+        (click)="showDate()"
+      >
+        Date
+      </button>
+      <button
+        type="button"
+        class="btn btn-sm btn-info"
+        [hidden]="!isDateVisible"
+        (click)="showTime()"
+      >
+        Time
+      </button>
+      <button type="button" class="btn btn-sm btn-danger" (click)="close()">
+        OK
+      </button>
+    </span>
+    <span class="clearfix"></span>
+  </div>
+</ng-template>
+
 <div id="comp-render" *ngIf="dropdown">
   <app-dropdown></app-dropdown>
 </div>
+
+<app-desk-dropdown></app-desk-dropdown>
