--- a/src/app/desk-booking/dropdown/dropdown.component.html
+++ b/src/app/desk-booking/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col">
       <div ngbDropdown class="d-inline-block">
         <button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Choose a room</button>
@@ -8,6 +8,4 @@
         </div>
       </div>
     </div>
-  </div>
-
-  
+  </div> -->
