--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,24 +29,28 @@
         id="navbarNav"
       >
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item ms-auto">
+          <li [hidden]="!authService.isLoggedIn()" class="nav-item ms-auto">
             <a class="nav-link" routerLink="/overview" routerLinkActive="active"
               >Overview</a
             >
           </li>
-          <li class="nav-item ms-auto">
+          <li [hidden]="!authService.isLoggedIn()" class="nav-item ms-auto">
             <a class="nav-link" routerLink="/booking" routerLinkActive="active"
               >Book a desk</a
             >
           </li>
-          <li class="nav-item ms-auto">
+          <li [hidden]="!authService.isLoggedIn()" class="nav-item ms-auto">
             <a class="nav-link" routerLink="/overview" routerLinkActive="active"
               >Cancel booking</a
             >
           </li>
-          <li class="nav-item ms-auto">
+          <li [hidden]="!authService.isLoggedIn()" class="nav-item ms-auto">
             <a class="nav-link pointer" (click)="logout()">Log out</a>
           </li>
+          <li [hidden]="authService.isLoggedIn()" class="nav-item ms-auto">
+            <a class="nav-link" routerLink="/auth/login" routerLinkActive="active"
+            >Login</a
+            >
         </ul>
       </div>
     </div>
