--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -121,6 +121,13 @@
                 </button>
               </div>
 
+              <div class="pt-2">
+                <div class="alert alert-success" *ngIf="!isRegistrationFailed">
+                  Account is created successfully. You'll be redirected to login
+                  in a second'.
+                </div>
+              </div>
+
               <p class="text-center text-muted mt-5 mb-0">
                 Already have an account?
                 <a
