--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -123,8 +123,8 @@
 
               <div class="pt-2">
                 <div class="alert alert-success" *ngIf="!isRegistrationFailed">
-                  Account is created successfully. You'll be redirected to login
-                  in a second'.
+                  Account is created successfully. You are being redirected to
+                  login page.
                 </div>
               </div>
 
