register button disabled if form invalid

--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -116,6 +116,7 @@
                 <button
                   type="submit"
                   class="btn btn-success btn-block btn-lgtext-body"
+                  [disabled]="regForm.invalid"
                 >
                   Register
                 </button>
