Displays list of reservations in cards

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,7 +40,7 @@
             >
           </li>
           <li [hidden]="!authService.isLoggedIn()" class="nav-item ms-auto">
-            <a class="nav-link" routerLink="/overview" routerLinkActive="active"
+            <a class="nav-link" routerLink="/cancellation" routerLinkActive="active"
               >Cancel booking</a
             >
           </li>
