Fixed loading reservations when routing menu

--- a/src/app/desk-booking-list/desk-booking-list.component.html
+++ b/src/app/desk-booking-list/desk-booking-list.component.html
@@ -1,4 +1,4 @@
-<h3 class="mt-5">Reservations</h3>
+<h3>Reservations</h3>
 
 <div class="row mt-5 text-center">
   <div class="col" *ngFor="let reservation of reservationsList$ | async">
