--- a/src/app/desk-booking-list/desk-booking-list.component.html
+++ b/src/app/desk-booking-list/desk-booking-list.component.html
@@ -21,6 +21,15 @@
       </div>
       <div class="grid-container align-items-center">
         <div class="flex-child h-fit left margin-left-5">
+          <h5 class="card-title fw-bold" style="font-size: 25px">Desk</h5>
+        </div>
+        <div class="flex-child center-content margin-right-5">
+          <p class="fw-bold card-detail w-fit"
+             style="font-size: 14px; margin-top: 17px;"> Desk {{ reservation.deskId }}</p>
+        </div>
+      </div>
+      <div class="grid-container align-items-center">
+        <div class="flex-child h-fit left margin-left-5">
           <h5 class="card-title fw-bold" style="font-size: 25px">Time</h5>
         </div>
         <div class="flex-child center-content margin-right-5">
