--- a/src/app/desk-booking-list/desk-booking-list.component.scss
+++ b/src/app/desk-booking-list/desk-booking-list.component.scss
@@ -66,6 +66,11 @@ hr{
   grid-gap: 20px;
 }
 
+.max-w{
+  max-width: 440px;
+  min-width: 440px;
+}
+
 //.flex-child {
 //  flex: 1;
 //  border: 2px solid yellow;
